# 2025-final-command-team-26-backend

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  pytest.ini
films_backend/api/: __init__.py  main.py
films_backend/api/routers/: auth.py  films.py  genres.py  playlists.py  rooms.py  users.py
films_backend/config/: __init__.py
films_backend/db/: __init__.py  models.py
films_backend/schemas/: basic_auth.py  films.py  genres.py  playlists.py  queries.py  rooms.py  tmdb.py
films_backend/services/: oauth.py  tmdb.py  voting.py  websockets.py
films_backend/tests/e2e/: test_auth.py  test_films.py  test_genres.py  test_ping.py  test_playlists.py  test_rooms.py
films_backend/utils/: __init__.py  api.py  auth.py  jwt.py  serializers.py
